--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "moment": "^2.24.0",
     "node-sass-chokidar": "^1.4.0",
     "react": "^16.5.2",
-    "react-apollo": "^3.1.3",
+    "react-apollo": "^2.5.8",
     "react-click-n-hold": "^1.0.7",
     "react-custom-scrollbars": "^4.2.1",
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^4.0.0",
     "react-sizeme": "^2.6.12",
     "react-sound": "^1.2.0",
     "react-speech-recognition": "^2.0.4",
