Retrying. At the end of point 7

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "awsappsyncchatstarte2e26f7b8": {
+    "awsappsyncchatstarte52dfc750": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -8,7 +8,7 @@
     }
   },
   "api": {
-    "awsappsyncchatstarte": {
+    "starter": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
       "output": {
@@ -16,7 +16,7 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authawsappsyncchatstarte2e26f7b8"
+              "userPoolId": "authawsappsyncchatstarte52dfc750"
             }
           },
           "additionalAuthenticationProviders": []
@@ -24,34 +24,12 @@
       }
     }
   },
-  "function": {
-    "S3Trigger8a9d5224": {
-      "service": "Lambda",
-      "providerPlugin": "awscloudformation",
-      "build": true
-    }
-  },
+  "function": {},
   "storage": {
-    "s328647904": {
+    "starter": {
       "service": "S3",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "S3Trigger8a9d5224",
-          "attributes": [
-            "Name",
-            "Arn",
-            "LambdaExecutionRole"
-          ]
-        }
-      ]
-    }
-  },
-  "hosting": {
-    "S3AndCloudFront": {
-      "service": "S3AndCloudFront",
       "providerPlugin": "awscloudformation"
     }
-  }
+  },
+  "hosting": {}
 }
